--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "node-cache": "^5.1.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "chai": "^5.2.0",
