--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "mocha --experimental-modules --recursive test/**/*.test.js"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
